--- a/All-Access-Pass/src/styles/RegisterPage.css
+++ b/All-Access-Pass/src/styles/RegisterPage.css
@@ -1,4 +1,4 @@
-.login-page {
+.register-page {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,14 +8,14 @@
   background-color: #f8f8f8;
 }
 
-.login-page h2 {
+.register-page h2 {
   font-size: 2rem;
   font-weight: 700;
   color: #333;
   margin-bottom: 1.5rem;
 }
 
-.login-page form {
+.register-page form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -27,14 +27,14 @@
   width: 100%;
 }
 
-.login-page label {
+.register-page label {
   font-size: 0.9rem;
   font-weight: 600;
   color: #555;
   margin-bottom: 0.25rem;
 }
 
-.login-page input {
+.register-page input {
   margin-bottom: 1.25rem;
   padding: 0.5rem 1rem;
   font-size: 1rem;
@@ -43,8 +43,8 @@
   border-radius: 5px;
 }
 
-.login-page button {
-  background-color: #2175f5;
+.register-page button {
+  background-color: #43a047;
   color: #fff;
   font-size: 1rem;
   font-weight: 600;
@@ -56,11 +56,11 @@
   transition: background-color 0.3s;
 }
 
-.login-page button:hover {
-  background-color: #1a5bb6;
+.register-page button:hover {
+  background-color: #388e3c;
 }
 
-.login-page .error {
+.register-page .error {
   background-color: #f8d7da;
   color: #721c24;
   border: 1px solid #f5c6cb;
@@ -70,17 +70,17 @@
   width: 100%;
 }
 
-.login-page p {
+.register-page p {
   font-size: 0.9rem;
   margin-top: 1.5rem;
   text-align: center;
 }
 
-.login-page p a {
-  color: #2175f5;
+.register-page p a {
+  color: #43a047;
   text-decoration: none;
 }
 
-.login-page p a:hover {
+.register-page p a:hover {
   text-decoration: underline;
 }
