--- a/All-Access-Pass/src/styles/LoginPage.css
+++ b/All-Access-Pass/src/styles/LoginPage.css
@@ -6,6 +6,9 @@
   justify-content: center;
   min-height: 100vh;
   background-color: #f5f5f5;
+  background-image: url("/Users/jd/Documents/Web Dev/AAP/All-Access-Pass/src/assets/BackGround-Img.png");
+  background-size: cover;
+  background-position: center;
 }
 
 h2 {
