--- a/All-Access-Pass/src/styles/RegisterPage.css
+++ b/All-Access-Pass/src/styles/RegisterPage.css
@@ -36,7 +36,7 @@
 
 .register-page input {
   margin-bottom: 1.25rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0rem;
   font-size: 1rem;
   width: 100%;
   border: 1px solid #ccc;
@@ -68,6 +68,18 @@
   border-radius: 5px;
   margin-bottom: 1rem;
   width: 100%;
+  text-align: center;
+}
+
+.register-page .success {
+  background-color: #d7f8de;
+  color: #2a721c;
+  border: 1px solid #d7f8de;
+  padding: 0.75rem 1.25rem;
+  border-radius: 5px;
+  margin-bottom: 1rem;
+  width: 100%;
+  text-align: center;
 }
 
 .register-page p {
