--- a/All-Access-Pass/src/styles/RewardsPage.css
+++ b/All-Access-Pass/src/styles/RewardsPage.css
@@ -1,9 +1,22 @@
-.rewards-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: calc(100vh - 104px);
-  background-color: #1abc9c;
-  color: white;
-  font-size: 2rem;
+.rewards-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.reward-image {
+  width: 100%;
+  height: 0;
+  padding-bottom: 75%; /* Adjust this value to change the aspect ratio of images */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: transform 0.3s ease;
+}
+
+.reward-image:hover {
+  transform: scale(1.1);
 }
