--- a/All-Access-Pass/src/styles/LoginPage.css
+++ b/All-Access-Pass/src/styles/LoginPage.css
@@ -6,7 +6,7 @@
   justify-content: center;
   min-height: 100vh;
   background-color: #f5f5f5;
-  background-image: url("/Users/jd/Documents/Web Dev/AAP/All-Access-Pass/src/assets/BackGround-Img.png");
+  background-image: url("https://t4.ftcdn.net/jpg/02/02/14/83/360_F_202148311_XXPcpHC6X2PLeS71MPIPuGudfI63jas6.jpg");
   background-size: cover;
   background-position: center;
 }
